--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -1,3 +1,2 @@
-<p [id]="propLegal"></p>
-
-<button (click)="fazerAlgo()">Fazer algo</button>
+<button mat-raised-button (click)="createProduct()" color="primary">Salvar</button>
+<button mat-raised-button (click)="cancel()">Cancelar</button>
