--- a/src/app/components/product/product-update/product-update.component.html
+++ b/src/app/components/product/product-update/product-update.component.html
@@ -1,6 +1,6 @@
 <mat-card>
-    <mat-card-title>Novo Produto</mat-card-title>
-    <form action="">
+    <mat-card-title>Alterar Produto</mat-card-title>
+    <form a>
         <mat-form-field>
             <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
         </mat-form-field>
@@ -11,6 +11,6 @@
 
 
     </form>
-    <button mat-raised-button (click)="createProduct()" color="primary">Salvar</button>
+    <button mat-raised-button (click)="updateProduct()" color="primary">Atualizar</button>
     <button mat-raised-button (click)="cancel()">Cancelar</button>
 </mat-card>
