--- a/src/app/views/product-crud/product-crud.component.html
+++ b/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,4 @@
-<button mat-raised-button (click)="navegateToProductCreate()">
+<button mat-raised-button (click)="navegateToProductCreate()" color="primary">
     Novo Produto
 </button>
+<app-product-read></app-product-read>
